# chrysaor

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  buf.gen.yaml  buf.yaml  justfile
api/: Cargo.toml  buf.gen.yaml  build.rs  volo.yml
api/idl/admin/v1/: api.proto  req.proto  resp.proto  user.proto
api/idl/base/: base.proto
api/idl/hello/: hello.proto
api/proto/admin/v1/: api.proto  user.proto
api/proto/base/: base.proto
api/src/: admin_gen.rs  lib.rs
api/src/admin/: admin_v1.rs  base.rs  mod.rs  user.rs  validate.rs
api/src/admin/v1/: admin.v1.rs  admin.v1.serde.rs  http.rs  mod.rs  req.proto  req.rs  resp.proto
api/src/base/: base.proto  base.rs  base.serde.rs
common/src/app/: app.rs  server.rs
config/admin/: app.yaml
crates/admin/: Cargo.toml  Dockerfile
crates/admin/src/: app.rs  lib.rs  main.rs  middleware.rs  router.rs  server.rs  service.rs
crates/admin/src/application/: mod.rs
crates/admin/src/application/service/: mod.rs
crates/admin/src/application/service/login/: mod.rs  service.rs
crates/admin/src/biz/: mod.rs
crates/admin/src/biz/login/: controller.rs  mod.rs
crates/admin/src/biz/login/command/: mod.rs  model.rs  service.rs
crates/admin/src/conf/: mod.rs  model.rs
crates/admin/src/data/: db.rs
crates/admin/src/domain/: mod.rs  uc.rs
crates/admin/src/domain/login/: login_domain_service.rs  mod.rs
crates/admin/src/helper/: init.rs  jwt.rs  mod.rs
crates/admin/src/infrastructure/: mod.rs
crates/admin/src/infrastructure/config/: model.rs
crates/admin/src/infrastructure/repository/: db_factory.rs  mod.rs  user_repository.rs
crates/admin/src/infrastructure/repository/factory/: mapper.rs  mod.rs
crates/admin/src/infrastructure/repository/user/: mapper.rs  mod.rs
crates/admin/src/infrastructure/support/: ctx.rs  mod.rs
crates/admin/src/interfaces/: mod.rs
crates/admin/src/interfaces/facade/: login.rs  mod.rs
crates/admin/src/login/: login_controller.rs  mod.rs
crates/admin/src/login/command/: login_command_service.rs  mod.rs
crates/admin/src/login/domain/: login_domain_service.rs  mod.rs
crates/admin/src/service/: mod.rs  service.rs  user.rs
crates/admin/src/usecase/: mod.rs  model.rs  uc.rs  user.rs
crates/admin/src/usercase/: mod.rs  uc.rs  user.rs
crates/admin/src/util/: ctx.rs  jwt.rs  mod.rs  user.rs
crates/banbridge_derive/: Cargo.toml
crates/banbridge_derive/examples/: my_error.rs
crates/banbridge_derive/src/: lib.rs
crates/banbridge_derive/src/biz_err_derive/: model.rs  my_error.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logid.rs
crates/common/src/app/: server.rs
crates/common/src/check/: str.rs
crates/common/src/context/: ctx.rs  log.rs  metainfo.rs  mod.rs  request_id.rs  task_local.rs  thread_local.rs
crates/common/src/crypt/: mod.rs
crates/common/src/error/: base.rs  convert.rs  err_code.rs  mod.rs
crates/common/src/extract/: axum.rs  mod.rs  volo.rs
crates/common/src/id_gen/: log_id.rs  mod.rs  uniq_id.rs
crates/common/src/jwt/: jwt.rs  mod.rs  model.rs
crates/common/src/log/: mod.rs
crates/common/src/log_id/: gen_log_id.rs  mod.rs
crates/common/src/middle/: fail_fallback.rs  log_id.rs  logid.rs  mod.rs  request.rs  request_timer.rs  trace.rs
crates/common/src/param/: base.rs  http.rs  mod.rs  result.rs
crates/common/src/password/: bcrypt_encoder.rs
crates/infra/: Cargo.toml
crates/infra/src/: conn.rs  dbop.rs  lib.rs
crates/infra/src/casbin_auth/: mod.rs  rbac_model.conf
crates/infra/src/casbin_auth/adapter/: action.rs  adapter.rs  entity.rs  migration.rs  mod.rs
crates/infra/src/entity/: casbin_rule.rs  mod.rs  prelude.rs  t_blog_user.rs  t_cloudnative_phone_dc.rs  t_cloudnative_phone_feature_gate.rs  t_cloudnative_phone_pod_info.rs  t_cloudnative_phone_pod_model_rule_settings.rs  t_cloudnative_phone_product_statistic.rs  user.rs
crates/infra/src/entity/schemas/: t_blog_user.sql
crates/infra/src/enumeration/: user.rs
crates/infra/src/repo/: factory.rs  mod.rs  repo.rs  user_repo.rs
crates/infra/src/repo/mysql/: mod.rs  user.rs
crates/infra/src/repo/mysql/factory/: client.rs  implement.rs  mod.rs
crates/infra/src/repo/mysql/user/: client.rs  login.rs  mod.rs
docker/: Dockerfile  source.list
docker/debian/: Dockerfile
