[workspace]
members = ["api", "crates/admin", "crates/common", "crates/infra"]

resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
walkdir = "2"
serde_json = "1"
config = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = "1.1"
anyhow = "1"
thiserror = "2"
num_cpus = "1"
tower-http = "0.6"
xid = "1.1"
rand = "0.9.1"
chrono = "0.4.41"
lazy_static = "1.5.0"
validator = "0.20"
bytesize = "2"
jsonwebtoken = "10.1.0"
bcrypt = "0.17"
bytes = "1"
get_if_addrs = "0.5"
hex = "0.4"
itoa = "1"
yit_id_generator = "1"
metainfo = "0.7"
faststr = "0.2.32"
coarsetime = "0.1"
async-trait = "0.1.88"
rudi = "0.8.3"

derive_builder = "0.20.2"
pilota-build = "0.12.15"
pilota = "0.12.3"
volo = "0.11.1"
volo-grpc = "0.11.6"
volo-http = "0.4.3"
volo-build = "0.11.5"
hyper = "1.7.0"
