[workspace]
members = [
    "api",
    "crates/admin",
    "crates/banbridge_derive",
    "crates/common",
    "crates/infra",
]

resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = "1"
walkdir = "2"
serde_json = "1"
config = "0.15.19"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
anyhow = "1"
thiserror = "2"
num_cpus = "1"
tower-http = "0.6"
xid = "1.1"
rand = "0.9.2"
chrono = "0.4.41"
lazy_static = "1.5.0"
validator = "0.20"
bytesize = "2.3.1"
jsonwebtoken = "10.2.0"
bcrypt = "0.17"
bytes = "1.11.0"
get_if_addrs = "0.5"
hex = "0.4"
itoa = "1"
yit_id_generator = "1"
metainfo = "0.7"
faststr = "0.2.32"
coarsetime = "0.1"
async-trait = "0.1.88"
rudi = "0.8.3"
backtrace = "0.3.76"
derive_builder = "0.20.2"
syn = "2.0"
darling = "0.23"
proc-macro2 = "1.0.103"
quote = "1.0.42"
unescaper = "0.1.6"
heck = "0.5.0"
