[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
prost = { workspace = true }
prost-validate = { workspace = true, features = ["derive"] }
pilota = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
prost-validate-build = { workspace = true }
pilota-build = { workspace = true }