[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
config = { workspace = true, features = ["yaml"] }
tracing = { workspace = true, features = ["async-await"] }

xid = { workspace = true }
validator = { workspace = true, features = ["derive"] }
bytesize = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
metainfo = { workspace = true }
faststr = { workspace = true, features = ["sea-orm", "serde"] }
rudi = { workspace = true }
lazy_static = { workspace = true }

api = { path = "../../api" }
infra = { path = "../infra" }
common = { path = "../common" }
