[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tracing = {workspace = true}
rand ={workspace = true}
chrono = {workspace = true}
lazy_static = {workspace = true}
thiserror = {workspace = true}
validator = {workspace = true,features = ["derive"] }
jsonwebtoken = {workspace = true}
anyhow = {workspace = true}
bcrypt = {workspace = true}
get_if_addrs = {workspace = true}
itoa = {workspace = true}
coarsetime = {workspace = true}
hex = {workspace = true}
faststr = {workspace = true}
yit_id_generator  = {workspace = true}
metainfo = {workspace = true}
prost-validate = { workspace = true, features = ["derive"] }

api = { path = "../../api" }