[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive"] }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
anyhow = { workspace = true }
bcrypt = { workspace = true }
get_if_addrs = { workspace = true }
itoa = { workspace = true }
coarsetime = { workspace = true }
hex = { workspace = true }
faststr = { workspace = true, features = ["serde"] }
yit_id_generator = { workspace = true }
metainfo = { workspace = true }
volo = { workspace = true }
volo-http = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "chrono",
    "json",
] }
derive_builder = { workspace = true }

api = { path = "../../api" }
