[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = [
    "with-chrono",
    "debug-print",
    "sqlx-mysql",
    "with-rust_decimal",
    "runtime-tokio",
] }
num_cpus = { workspace = true }
async-trait = { workspace = true }
rudi = { workspace = true }
faststr = { workspace = true, features = ["sea-orm", "serde"] }
tracing = { workspace = true, features = ["async-await"] }
chrono = { workspace = true }

common = { path = "../common" }
