[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
num_cpus = { workspace = true }
async-trait = { workspace = true }
faststr = { workspace = true, features = ["sea-orm", "serde"] }
tracing = { workspace = true, features = ["async-await"] }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
rust-embed = { workspace = true }
casbin = { workspace = true }
getset = { workspace = true }

common = { path = "../common" }
